--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<nav>
+  <div class="container nav-bar">
+    <a href="#">
+      <p class="headline">sports fan synthesizer.</p>
+      <img>logo</img>
+    </a>
+    <ul class="nav-list">
+      <li><a href="#">app</li>
+      <li><a href="#">about</li>
+    </ul>
+  </div>
+</nav>
