--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,8 +5,8 @@
       <!-- <img>logo</img> -->
     </a>
     <ul class="nav-list">
-      <li><a href="#">app</li>
-      <li><a href="#">about</li>
+      <li><a href="#">app</a></li>
+      <li><a href="./about">about</a></li>
     </ul>
   </div>
 </nav>
@@ -27,6 +27,7 @@
           <option value="maroon">maroon</option>
           <option value="white">white</option>
         </select>
+        <input type="submit" value="Submit"></input>
       </form>
     </div>
     <div class="resultBox">
