Style changes to input box

--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -14,4 +14,5 @@
   <h2>{{teamName}}</h2>
   <h3>{{location}}</h3>
   <p>This team's primary colour is {{primaryColour}} and its secondary colour is {{secondaryColour}}</p>
+  <img src="http://i.cdn.turner.com/nba/nba/teamsites/images/legacy/celtics/CelticsLogo_History.gif">
 </div>
