--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,23 @@ ul {
   list-style: none;
 }
 
+.main-area {
+  text-align: center;
+  margin: 0 auto;
+  color: black;
+}
+
+/** QUERY BOX **/
+
+.queryBox {
+  background-color: white;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 30px;
+  border-radius: 20px;
+  padding: 80px 0;
+}
+
 /** NAV BAR **/
 nav {
   background-color: white;
