Add media queries

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,13 +3,13 @@
 body {
   padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: grey;
+  background-color: #cae1e6;
   color: black;
   margin: 0;;
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 960px;
   margin: 0 auto;
 }
 
@@ -27,6 +27,8 @@ ul {
   text-align: center;
   margin: 0 auto;
   color: black;
+  display: flex;
+  max-width: 1060px;
 }
 
 img {
@@ -35,15 +37,24 @@ img {
 }
 
 
-/** QUERY BOX **/
+/** MAIN BOXES **/
 
-.queryBox {
+.queryBox, .resultBox {
   background-color: white;
-  max-width: 600px;
-  margin: 0 auto;
-  margin-top: 30px;
+  width: 50%;
+  margin: 30px;
   border-radius: 20px;
   padding: 80px 0;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .main-area {
+    display: block;
+  }
+  .queryBox, .resultBox {
+    width: 90%;
+  }
 }
 
 /** NAV BAR **/
@@ -72,14 +83,10 @@ ul li {
   text-align: right;
 }
 
-/** Show Team Page **/
 
-.resultBox {
-  background-color: white;
-  max-width: 600px;
+/** Form **/
+
+form select, form input{
+  display: block
   margin: 0 auto;
-  margin-top: 30px;
-  border-radius: 20px;
-  padding: 80px 20px;
-  text-align: center;
 }
