--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,36 +1,23 @@
-<nav>
-  <div class="container nav-bar">
-    <a href="#">
-      <p class="headline">sports fan synthesizer.</p>
-      <!-- <img>logo</img> -->
-    </a>
-    <ul class="nav-list">
-      <li><a href="#">app</a></li>
-      <li><a href="./about">about</a></li>
-    </ul>
-  </div>
-</nav>
 <div class="main-area">
-  <div class="container">
-    <div class="queryBox">
-      <h1>Tell us some things about you</h1>
-      <form action="/showTeam" method="get">
-        <select name="league">
-          <option value="nbaTeams">NBA</option>
-          <option value="superRugbyTeams">Super Rugby</option>
-        </select>
-        <select name="Colour">
-          <option value="black">black</option>
-          <option value="blue">blue</option>
-          <option value="red">red</option>
-          <option value="yellow">yellow</option>
-          <option value="maroon">maroon</option>
-          <option value="white">white</option>
-        </select>
-        <input type="submit" value="Submit"></input>
-      </form>
-    </div>
-    <div class="resultBox">
-    </div>
+  <div class="queryBox">
+    <h1>Tell us some things about you</h1>
+    <form action="/showTeam" method="get">
+      <select name="league">
+        <option value="nbaTeams">NBA</option>
+        <option value="superRugbyTeams">Super Rugby</option>
+      </select>
+      <select name="Colour" label="Favourite Colour">
+        <option value="black">black</option>
+        <option value="blue">blue</option>
+        <option value="red">red</option>
+        <option value="yellow">yellow</option>
+        <option value="maroon">maroon</option>
+        <option value="white">white</option>
+      </select>
+      <input type="submit" value="Submit"></input>
+    </form>
+  </div>
+  <div class="resultBox">
+    <h1>Who's it gonna be...</h1>
   </div>
 </div>
