--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,21 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <nav>
+      <div class="container nav-bar">
+        <a href="../">
+          <p class="headline">sports fan synthesizer.</p>
+          <!-- <img>logo</img> -->
+        </a>
+        <ul class="nav-list">
+          <li><a href="../">app</a></li>
+          <li><a href="../about">about</a></li>
+        </ul>
+      </div>
+    </nav>
     {{{body}}}
   </body>
 </html>
