--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,10 @@ body {
   margin: 0 auto;
 }
 
+.margined-text {
+  margin: 10px 25px;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -27,8 +31,11 @@ ul {
   text-align: center;
   margin: 0 auto;
   color: black;
-  display: flex;
   max-width: 1060px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
@@ -41,11 +48,13 @@ img {
 
 .queryBox, .resultBox {
   background-color: white;
-  width: 50%;
+  /*width: 50%;*/
   margin: 30px;
+  min-height: 280px;
   border-radius: 20px;
-  padding: 80px 0;
+  /*padding: 80px 0;*/
   text-align: center;
+  flex: 1;
 }
 
 @media (max-width: 768px) {
@@ -87,6 +96,16 @@ ul li {
 /** Form **/
 
 form select, form input{
-  display: block
-  margin: 0 auto;
+  background-color: white;
+  border: solid 2px gray;
+  color: gray;
+  display: block;
+  margin: 20px auto;
+  width: 85%;
+  text-align: center;
+  font-size: xx-large;
+}
+
+input {
+  border-radius: 5px;
 }
