Add pictures for nba teams

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="main-area">
   <div class="queryBox">
-    <h1>Tell us some things about you</h1>
+    <h1>Pick Some Things...</h1>
     <form action="/showTeam" method="get">
       <select name="league">
         <option value="nbaTeams">NBA</option>
