--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
         </a>
         <ul class="nav-list">
           <li><a href="../">app</a></li>
-          <li><a href="../about">about</a></li>
+          <li><a href="../about.html">about</a></li>
         </ul>
       </div>
     </nav>
