--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -25,3 +25,8 @@
     <h3>{{teamName}} fans synthesized: {{views}}</h3>
   </div>
 </div>
+<div class="main-area">
+  <div class="bottom">
+    <h3> Total fans synthesized in this leage: {{totalViews}}</h3>
+  </div>
+</div>
