--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,10 +3,12 @@
     <h1>Pick Some Things...</h1>
     <form action="/showTeam" method="get">
       <select name="league">
+        <option selected disabled>League</option>
         <option value="nbaTeams">NBA</option>
         <option value="superRugbyTeams">Super Rugby</option>
       </select>
       <select name="Colour" label="Favourite Colour">
+        <option selected disabled>Colour</option>
         <option value="black">black</option>
         <option value="blue">blue</option>
         <option value="red">red</option>
