--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -3,10 +3,12 @@
     <h2 class="margined-text">Pick Some Things...</h2>
     <form action="/showTeam" method="get">
       <select name="league">
+        <option selected disabled>Choose a League</option>
         <option value="nbaTeams">NBA</option>
         <option value="superRugbyTeams">Super Rugby</option>
       </select>
       <select name="Colour" label="Favourite Colour">
+        <option selected disabled>Choose a Colour</option>
         <option value="black">black</option>
         <option value="blue">blue</option>
         <option value="red">red</option>
