--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -32,3 +32,8 @@
     <h3> Total fans synthesized in this leage: {{totalViews}}</h3>
   </div>
 </div>
+<div class="main-area">
+  <div class="bottom">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423283.3360632283!2d-118.69191712130637!3d34.02075044730495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos+Angeles%2C+CA%2C+USA!5e0!3m2!1sen!2snz!4v1478667631529" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
