--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
-<div class="main-area">
-  <div class="queryBox">
+<div class="container main">
+  <div class="halfBox">
     <h1>Pick Some Things...</h1>
     <form action="/showTeam" method="get">
       <select name="league">
@@ -16,10 +16,10 @@
         <option value="maroon">maroon</option>
         <option value="white">white</option>
       </select>
-      <input type="submit" value="Submit"></input>
+      <input id="submit" type="submit" value="Submit"></input>
     </form>
   </div>
-  <div class="resultBox">
+  <div class="halfBox">
     <h1>Who's it gonna be...</h1>
   </div>
 </div>
