--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,14 +7,11 @@
   </head>
   <body>
     <nav>
-      <div class="container nav-bar">
-        <a href="../">
-          <p class="headline">sports fan synthesizer.</p>
-          <!-- <img>logo</img> -->
-        </a>
-        <ul class="nav-list">
-          <li><a href="../">app</a></li>
-          <li><a href="../about.html">about</a></li>
+      <div class="container nav-container">
+        <a class="title" href="/.">sports fan synthesizer.</a>
+        <ul>
+          <li><a href="/.">app</a></li>
+          <li><a href="/about">about</a></li>
         </ul>
       </div>
     </nav>
