--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -1,6 +1,6 @@
-<div class="main-area">
-  <div class="queryBox">
-    <h2 class="margined-text">Pick Some Things...</h2>
+<div class="container main">
+  <div class="halfBox">
+    <h2>Pick Some Things...</h2>
     <form action="/showTeam" method="get">
       <select name="league">
         <option selected disabled>Choose a League</option>
@@ -16,10 +16,15 @@
         <option value="maroon">maroon</option>
         <option value="white">white</option>
       </select>
-      <input type="submit" value="Submit"></input>
+      <select name="location" label="Find your nearest team?">
+        <option selected disabled>Find your nearest team?</option>
+        <option value="yes">yes</option>
+        <option value="no">no</option>
+      </select>
+      <input id="submit" type="submit" value="Submit"></input>
     </form>
   </div>
-  <div class="resultBox">
+  <div class="halfBox">
     <h2 class="margined-text">{{teamName}}</h2>
     <h3 class="margined-text">{{location}}</h3>
     <p>This team's primary colour is {{primaryColour}} and its secondary colour is {{secondaryColour}}</p>
@@ -27,13 +32,18 @@
     <h3>{{teamName}} fans synthesized: {{views}}</h3>
   </div>
 </div>
-<div class="main-area">
-  <div class="bottom">
+<div class="container">
+  <div class="fullBox save">
+    <h3> Save this team</h3>
+  </div>
+</div>
+<div class="container">
+  <div class="fullBox">
     <h3> Total fans synthesized in this leage: {{totalViews}}</h3>
   </div>
 </div>
-<div class="main-area">
-  <div class="bottom">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423283.3360632283!2d-118.69191712130637!3d34.02075044730495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos+Angeles%2C+CA%2C+USA!5e0!3m2!1sen!2snz!4v1478667631529" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="container">
+  <div class="fullBox map-responsive">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423283.3360632283!2d-118.69191712130637!3d34.02075044730495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos+Angeles%2C+CA%2C+USA!5e0!3m2!1sen!2snz!4v1478667631529" width="920" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
