--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://maps.googleapis.com/map/api/js?sensor=false"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
