--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,8 +39,9 @@ ul {
 }
 
 img {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: auto;
+  margin: 30px 0;
 }
 
 h1, h2, h3, h4 {
@@ -68,6 +69,10 @@ h1, h2, h3, h4 {
   .halfBox, .fullBox {
     margin-bottom: 10px;
   }
+  .map-responsive{
+      overflow:hidden;
+      padding-bottom:56.25%;
+    }
 }
 /*************/
 /** NAV BAR **/
@@ -105,6 +110,8 @@ nav a {
 
 nav a:hover {
   color: #2ECC71;
+  /*border: solid 1px #2ECC71;*/
+  /*border-radius: 10px;*/
 }
 
 /**********/
@@ -118,6 +125,7 @@ form select, form input{
   color: gray;
   display: block;
   margin: 20px auto;
+  height: 50px;
   width: 85%;
   font-size: large;
 }
@@ -137,6 +145,7 @@ select:hover {
 #submit {
   background-color: #2ECC71;
   color: white;
+  padding: 10px 0;
 }
 
 #submit:hover {
@@ -160,12 +169,15 @@ select:hover {
 
 .map-responsive{
     overflow:hidden;
-    padding-bottom:56.25%;
+    padding-bottom:26.25%;
     position:relative;
     height:0;
+    max-height: 300px;
 }
+
 .map-responsive iframe{
     left:0;
+    max-height: 300px;
     top:0;
     height:100%;
     width:100%;
