--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
         <option value="maroon">maroon</option>
         <option value="white">white</option>
       </select>
-      <input id="submit" type="submit" value="Submit"></input>
+      <input id="submit" type="submit" value="Let's Go!"></input>
     </form>
   </div>
   <div class="halfBox">
