--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -21,13 +21,12 @@
         <option value="yes">yes</option>
         <option value="no">no</option>
       </select>
-      <input id="submit" type="submit" value="Submit"></input>
+      <input id="submit" type="submit" value="Let's Go!"></input>
     </form>
   </div>
   <div class="halfBox">
     <h2 class="margined-text">{{teamName}}</h2>
-    <h3 class="margined-text">{{location}}</h3>
-    <p>This team's primary colour is {{primaryColour}} and its secondary colour is {{secondaryColour}}</p>
+    <!-- <p>This team's primary colour is {{primaryColour}} and its secondary colour is {{secondaryColour}}</p> -->
     <img src="{{imageURL}}">
     <h3>{{teamName}} fans synthesized: {{views}}</h3>
   </div>
