Add show map button but not functionality

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -158,8 +158,17 @@ select:hover {
   background-color: #2ECC71;
   color: white;
 }
+.mapShow {
+  box-sizing: border-box;
+  background-color: #2c3e50;
+  color: white;
+}
 
-.save:hover {
+.viewsBox {
+  /*background-color: #f39c12;*/
+}
+
+.save:hover, .mapShow:hover, .viewShow:hover {
   opacity: 0.8;
 }
 
@@ -169,15 +178,15 @@ select:hover {
 
 .map-responsive{
     overflow:hidden;
-    padding-bottom:26.25%;
+    padding-bottom:56.25%;
     position:relative;
     height:0;
-    max-height: 300px;
+    /*max-height: 300px;*/
 }
 
 .map-responsive iframe{
     left:0;
-    max-height: 300px;
+    /*max-height: 300px;*/
     top:0;
     height:100%;
     width:100%;
