--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -37,8 +37,13 @@
   </div>
 </div>
 <div class="container">
-  <div class="fullBox">
+  <div class="fullBox viewsBox">
     <h3> Total fans synthesized in this leage: {{totalViews}}</h3>
+  </div>
+</div>
+<div class="container">
+  <div class="fullBox mapShow">
+    <h3> Show map</h3>
   </div>
 </div>
 <div class="container">
