Add scraper/index.js that can get team names from nba.com/teams

--- a/views/showTeam.hbs
+++ b/views/showTeam.hbs
@@ -42,11 +42,11 @@
   </div>
 </div>
 <div class="container">
-  <div class="fullBox mapShow">
+  <div class="fullBox mapShow" id="showMapButton">
     <h3> Show map</h3>
   </div>
 </div>
-<div class="container">
+<div class="container hidden" id="map">
   <div class="fullBox map-responsive">
     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCTqTol11Eye3Qp52o4jJbhdfxcoxRXetg
     &q={{location}}&zoom=6" width="920" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
