--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,6 +34,8 @@ a {
 ul {
   text-decoration: none;
   list-style: none;
+  cursor: pointer;
+  cursor: hand;
   /*margin: 0;
   padding: 0;*/
 }
@@ -146,6 +148,8 @@ select:hover {
   background-color: #2ECC71;
   color: white;
   padding: 10px 0;
+  cursor: pointer;
+  cursor: hand;
 }
 
 #submit:hover {
@@ -157,11 +161,17 @@ select:hover {
   box-sizing: border-box;
   background-color: #2ECC71;
   color: white;
+  cursor: pointer; cursor: hand;
 }
 .mapShow {
   box-sizing: border-box;
   background-color: #2c3e50;
   color: white;
+  cursor: pointer; cursor: hand;
+}
+
+.hidden {
+  display: none;
 }
 
 .viewsBox {
