Add new migration

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,5 +17,5 @@
     </nav>
     {{{body}}}
   </body>
-  <script src="/public/javscripts/index.js"></script>
+  <script src="./index.js"></script>
 </html>
